# mlops66_Financial-Fraud-Detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  docker-entrypoint.sh  locustfile.py  main.py  predict.py  preprocess.py  pyproject.toml  requirements.txt  requirements_tests.txt  ruff.toml  train.py  vertex_train.py
.dvc/: config
.github/workflows/: DVC_workflow.yaml  api_tests.yaml  ci-cd.yaml  cloudbuild_WF.yaml  codecheck.yaml  tests.yaml  unitTests_and_lint.yaml
api/: main.py  schemas.py
mlops66_Finacial-Fraud-Detection/: .gitignore  ieee_cis_preprocessor.pkl
mlops66_Finacial-Fraud-Detection/src/mlops66_project/: __init__.py  preprocess.py
mlops66_Finacial-Fraud-Detection/src/mlops66_project/config/: __init__.py  settings.py
mlops66_Finacial-Fraud-Detection/src/mlops66_project/data/: __init__.py
mlops66_Finacial-Fraud-Detection/src/mlops66_project/features/: __init__.py  encoders.py  (+2 more)
reports/: README.md
src/: test_test_test.py
src/config/: __init__.py  settings.py
src/data/: dataset_statistics.py  loader.py
src/evaluation/: __init__.py  drift_check.py  metrics.py  uncertainty.py
src/features/: __init__.py  encoders.py  preprocessor.py  time_features.py
src/models/: __init__.py  callbacks.py  tabnet_trainer.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_api.py  test_callbacks.py  test_encoders.py  test_helpers.py  test_loader.py  test_metrics.py  test_model.py  test_preprocessor.py  test_settings.py  test_tabnet_trainer.py  test_time_features.py  test_uncertainty.py
(+2 files in other folders)
